tests/specs/check/ambient_modules/bar.out
Check (tsc [WILDLINE])
TS2307 [ERROR]: Cannot find module '/logo.svg' or its corresponding type declarations.
import logo from "/logo.svg";
                 ~~~~~~~~~~~
    at file://[WILDCARD]/ambient_modules/bar.ts:1:18

error: Type checking failed.
