tests/specs/check/ambient_modules/bar.ts
import logo from "/logo.svg";
console.log(logo);
